# TailTalk

./: .gitignore  Cargo.toml  README.md  Setup.md
.github/workflows/: rust.yml
TashTalkUSB/: README.md  TashTalkUSB.kicad_pcb  tashtalk-setup.sh
docs/: daemon-protocol.md
examples/adsp-stylewriter/: Cargo.toml  main.rs
examples/aep-echo/: Cargo.toml  main.rs
examples/afp-server/: Cargo.toml  main.rs
examples/nbp-lookup/: Cargo.toml  main.rs
examples/pap-capture/: Cargo.toml  main.rs
examples/pap-print/: Cargo.toml  main.rs
examples/sw-rename/: Cargo.toml  main.rs
examples/tailtalk-gui/: Cargo.toml  main.rs
examples/tailtalk-gui/ui/: app.slint
hfs-reader/: Cargo.toml
hfs-reader/src/: lib.rs
tailtalk/: Cargo.toml
tailtalk-daemon/: Cargo.toml
tailtalk-daemon/src/: lib.rs  main.rs
tailtalk-daemon/tests/: integration.rs
tailtalk-gui/: Cargo.toml  Info.plist  build.rs  ipp_bridge.rs  log_layer.rs  lw_bridge.rs  main.rs
tailtalk-gui/ui/: app.slint
tailtalk-packets/: Cargo.toml
tailtalk-packets/src/: aarp.rs  adsp.rs  ddp.rs  ethertalk.rs  lib.rs  nbp.rs  pap.rs  rtmp.rs  zip.rs
tailtalk-packets/src/afp/: bitmap.rs  commands.rs  mod.rs  types.rs  util.rs
tailtalk-proto/: Cargo.toml  build.rs
tailtalk-proto/proto/: tailtalk.proto
tailtalk-proto/src/: lib.rs
tailtalk/src/: addressing.rs  adsp.rs  asp.rs  atp.rs  ddp.rs  echo.rs  ethertalk.rs  lib.rs  nbp.rs  pap.rs  remote.rs  route_table.rs  rtmp.rs  stylewriter.rs  zip.rs
tailtalk/src/afp/: desktop.rs  mod.rs  server.rs  volume.rs
tailtalk/tests/: adsp_test.rs  asp_session_test.rs  asp_status_test.rs  client_exchange.rs  pap_test.rs
tashtalk/: Cargo.toml
tashtalk/src/: codec.rs  lib.rs
