[workspace]
members = [
  "tailtalk-packets",
  "tailtalk",
  "examples/nbp-lookup",
  "examples/aep-echo",
  "examples/pap-print",
  "examples/afp-server",
  "examples/adsp-stylewriter",
  "tailtalk-gui",
  "tashtalk",
  "hfs-reader",
]
resolver = "3"

[workspace.dependencies]
anyhow = "^1.0.102" #unified
byteorder = "^1.5.0" #unified
bytes = "^1.11.1" #unified
clap = { version = "^4.6.0", features = ["derive"] } #unified
encoding_rs = "^0.8.35" #unified
futures = "^0.3.32" #unified
hfs-reader = { path = "hfs-reader", version = "^0.1.1" } #unified
tailtalk = { path = "tailtalk" } #unified
tailtalk-packets = { path = "tailtalk-packets", version = "^0.5" } #unified
tashtalk = { path = "tashtalk", version = "^0.2" } #unified
thiserror = "^1.0.69" #unified
tokio = { version = "^1.51.1", features = ["full", "io-util"] } #unified
tracing = "^0.1.44" #unified

[workspace.package]
version = "0.5.1"
rust-version = "1.90.0"
