[package]
name = "tailtalk-gui"
version.workspace = true
edition = "2024"
publish = false

[[bin]]
name = "tailtalk-gui"
path = "main.rs"

[features]
default = ["tashtalk"]
tashtalk = ["dep:serialport"]
ethertalk = ["dep:if-addrs"]

[dependencies]
anyhow = { workspace = true } #unified
dirs = "5"
hfs-reader = { workspace = true } #unified
if-addrs = { version = "0.13", optional = true }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serialport = { version = "4", optional = true }
slint = "1"
stuffit = "0.1.4"
tailtalk = { workspace = true } #unified
tailtalk-packets = { workspace = true } #unified
tokio = { workspace = true, features = ["io-util"] } #unified
toml = "0.8"
tracing = { workspace = true } #unified
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
slint-build = "1"

[package.metadata.packager]
product_name = "TailTalk"
identifier = "com.tailtalk.app"
formats = ["app", "dmg", "appimage"]
out_dir = "../dist"
icons = ["../icon.png"]

[[package.metadata.packager.binaries]]
path = "tailtalk-gui"
main = true

[package.metadata.packager.macos]
minimum_system_version = "10.12"
info_plist_path = "Info.plist"

[package.metadata.packager.dmg]
window_size = { width = 540, height = 380 }
app_position = { x = 130, y = 220 }
application_folder_position = { x = 410, y = 220 }
