[package]
name = "tailtalk-packets"
version.workspace = true
edition = "2024"
license-file = "../LICENSE"
description = "Parsers and encoders for AppleTalk packets"
authors = ["FeralFirmware"]
repository = "https://github.com/feralfirmware/tailtalk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.6"
byteorder = { workspace = true } #unified
bytes = { workspace = true } #unified
encoding_rs = "0.8.33"
thiserror = { workspace = true } #unified

[dev-dependencies]
assert_hex = "0.4.1"
pretty_assertions = "1.4.1"
