[package]
name = "tailtalk"
version.workspace = true
edition = "2024"
license-file = "../LICENSE"
description = "A modern async user space AppleTalk stack with Rust + Tokio "
authors = ["FeralFirmware"]
repository = "https://github.com/feralfirmware/tailtalk"
readme = "../README.md"

[lib]
name = "tailtalk"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true } #unified
byteorder = { workspace = true } #unified
bytes = { workspace = true } #unified
dashmap = "6.1.0"
encoding_rs = { workspace = true } #unified
futures = { workspace = true } #unified
im = "15.1.0"
mac_address = { version = "1.1", optional = true }
magic-db = "0.5"
pcap = { version = "2", features = ["capture-stream"], optional = true }
rand = "0.10"
sled = "0.34"
tailtalk-packets = { workspace = true } #unified
tailtalk-proto = { workspace = true } #unified
tashtalk = { workspace = true } #unified
tokio = { workspace = true, features = ["io-util"] } #unified
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.12", features = ["codec"] }
tracing = { workspace = true } #unified
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
get_adapters_addresses.workspace = true


[target.'cfg(unix)'.dependencies]
xattr = "1.3.1"

[features]
ethertalk = ["dep:pcap", "dep:mac_address"]

[dev-dependencies]
tempfile = "3.13"
