[package]
name = "tashtalk"
version = "0.2.3"
edition = "2024"
description = "A client library for the TashTalk LocalTalk adapter"
repository = "https://github.com/feralfirmware/tailtalk"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = { workspace = true } #unified
futures = { workspace = true } #unified
thiserror = { workspace = true } #unified
tokio = { workspace = true, features = ["full"] } #unified
tokio-util = { version = "0.7.12", features = ["codec"] }
tracing = { workspace = true } #unified
