[package]
name = "adsp-stylewriter"
version = "0.1.2"
edition = "2024"
publish = false

[[bin]]
name = "adsp-stylewriter"
path = "main.rs"

[dependencies]
anyhow = { workspace = true } #unified
clap = { workspace = true } #unified
tailtalk = { workspace = true } #unified
tailtalk-packets = { workspace = true } #unified
tokio = { workspace = true, features = ["io-util"] } #unified
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
