[package]
name = "adsp-stylewriter"
version.workspace = true
edition = "2024"
publish = false

[[bin]]
name = "adsp-stylewriter"
path = "main.rs"

[dependencies]
anyhow = { workspace = true } #unified
clap = { workspace = true } #unified
tailtalk = { workspace = true, features = ["ethertalk"] } #unified
tailtalk-packets = { workspace = true } #unified
tokio = { workspace = true, features = ["io-util", "time"] } #unified
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
