[package]
name = "afp-server-example"
version = "0.1.2"
edition = "2024"
publish = false

[[bin]]
name = "afp-server"
path = "main.rs"

[dependencies]
clap = { workspace = true } #unified
tailtalk = { workspace = true } #unified
tailtalk-packets = { workspace = true } #unified
tokio = { workspace = true, features = ["io-util"] } #unified
tracing = { workspace = true } #unified
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
