[package]
name = "afp-server-example"
version.workspace = true
edition = "2024"
publish = false

[[bin]]
name = "afp-server"
path = "main.rs"

[dependencies]
clap = { workspace = true } #unified
tailtalk = { workspace = true, features = ["ethertalk"] } #unified
tailtalk-packets = { workspace = true } #unified
tokio = { workspace = true, features = ["io-util"] } #unified
tracing = { workspace = true } #unified
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
