[package]
name = "pap-capture-example"
version.workspace = true
edition = "2024"
publish = false

[[bin]]
name = "pap-capture"
path = "main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tailtalk = { workspace = true, features = ["ethertalk"] }
tailtalk-packets = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
