[package]
name = "pap-print-example"
version.workspace = true
edition = "2024"
publish = false

[[bin]]
name = "pap-print"
path = "main.rs"

[dependencies]
anyhow = { workspace = true } #unified
clap = { workspace = true } #unified
tailtalk = { workspace = true } #unified
tailtalk-packets = { workspace = true } #unified
tokio = { workspace = true, features = ["io-util"] } #unified
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
